<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purpel"
    tools:context=".MainActivity3">

        <ImageView
            android:id="@+id/imageMerpati"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:src="@drawable/putih"
            android:contentDescription="@string/merpati_warna_putih"
            android:scaleType="centerInside"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <!-- Nama Merpati -->
        <TextView
            android:id="@+id/textMerpati"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/merpati_warna_putihh"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/imageMerpati"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Tombol Checkout -->
        <Button
            android:id="@+id/buttonCheckout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:text="@string/checkout"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/textMerpati"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
